--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "assets-webpack-plugin": "^3.9.12",
     "autoprefixer": "^9.7.6",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.1",
     "file-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
