--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.1",
     "file-loader": "^6.0.0",
+    "glob": "^7.1.6",
     "mini-css-extract-plugin": "^0.9.0",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -33,6 +34,7 @@
     "typeface-raleway": "^0.0.75",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
+    "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
