--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev-hugo": "hugo -D -vw",
     "build": "run-s build-webpack build-hugo",
     "build-webpack": "NODE_ENV=production webpack --config webpack.prod.js",
-    "build-hugo": "hugo",
+    "build-hugo": "hugo --minify",
     "preview": "run-s build-webpack preview-hugo",
     "preview-hugo": "hugo -D",
     "serve": "serve ./public"
