--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,6 @@
   HUGO_VERSION = "0.68.3"
   YARN_VERSION = "1.22.4"
   NODE_ENV = "production"
+
+[context.preview]
+  command = "yarn run preview"
