Make single article layout dynamic

--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,11 @@ baseURL = "https://roemers.io/"
 languageCode = "en-us"
 title = "Bruno Roemers Portfolio"
 GoogleAnalytics = 'UA-163268784-1'
+
+[markup.goldmark.renderer]
+  unsafe = true
+
+[markup.tableOfContents]
+  startLevel = 2
+  endLevel = 3
+  ordered = false
